[gd_scene load_steps=6 format=3 uid="uid://ckfeoqignun57"]

[ext_resource type="Script" path="res://enemy.gd" id="1_n2hhm"]

[sub_resource type="BoxMesh" id="BoxMesh_gpase"]

[sub_resource type="BoxShape3D" id="BoxShape3D_73yxf"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_hqxcm"]
height = 0.8
radius = 15.0

[sub_resource type="BoxShape3D" id="BoxShape3D_y5veh"]

[node name="Enemy" type="RigidBody3D"]
script = ExtResource("1_n2hhm")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_gpase")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
shape = SubResource("BoxShape3D_73yxf")

[node name="PlayerSearchArea3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerSearchArea3D"]
shape = SubResource("CylinderShape3D_hqxcm")

[node name="EnemyScoreLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.747131, 0)
text = "text"
font_size = 150

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]

[node name="PlayerCollisionArea3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerCollisionArea3D"]
shape = SubResource("BoxShape3D_y5veh")

[connection signal="body_entered" from="PlayerSearchArea3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="PlayerSearchArea3D" to="." method="_on_area_3d_body_exited"]
[connection signal="body_entered" from="PlayerCollisionArea3D" to="." method="_on_player_collision_area_3d_body_entered"]
